--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.Trending"
         tools:targetApi="31">
         <activity
-            android:name=".ui.trending.MainActivity"
+            android:name="com.orangeink.trending.feature_trending.presentation.TrendingActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true">
             <intent-filter>
