--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "com.orangeink.trending.HiltTestRunner"
+        testInstrumentationRunner "com.orangeink.trending.di.HiltTestRunner"
     }
 
     buildTypes {
@@ -112,7 +112,10 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     testImplementation "com.google.truth:truth:1.0.1"
-    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation "app.cash.turbine:turbine:0.8.0"
 
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:4.13.2"
@@ -122,8 +125,10 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:1.0.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.mockito:mockito-core:2.28.2"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    androidTestImplementation "org.mockito:mockito-core:4.0.0"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.40.5'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.42'
 }
